fixed svgs on mobile and wrote zephyr blog post

--- a/public/style/blog.css
+++ b/public/style/blog.css
@@ -71,7 +71,7 @@
 
 .blog-ender {
   font-family: "Lora", serif;
-  font-size: 16px;
+  font-size: 18px;
   max-width: 90ch;
   overflow: hidden;
   padding-bottom: 10em;
